<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="1dp"
        app:cardCornerRadius="14dp"
        android:backgroundTint="@color/background1"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:fontFamily="@font/roboto_semibold"
                android:text="@string/title"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:hint="@string/password"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:background="@drawable/border_design"
                android:paddingHorizontal="15dp"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <CheckBox
                android:id="@+id/lowerCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:text="@string/lowercase"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_semibold"
                app:layout_constraintStart_toStartOf="@+id/tvPassword"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword"/>

            <CheckBox
                android:id="@+id/upperCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:text="@string/uppercase"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_semibold"
                app:layout_constraintEnd_toEndOf="@+id/tvPassword"
                app:layout_constraintStart_toEndOf="@+id/lowerCase"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword"/>

            <CheckBox
                android:id="@+id/numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:text="@string/numbers"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_semibold"
                app:layout_constraintStart_toStartOf="@+id/lowerCase"
                app:layout_constraintTop_toBottomOf="@+id/lowerCase"/>

            <CheckBox
                android:id="@+id/symbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:text="@string/symbols"
                android:fontFamily="@font/roboto_semibold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/upperCase"
                app:layout_constraintStart_toStartOf="@+id/upperCase"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGenera"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="25dp"
                android:text="@string/btn_generate"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_semibold"
                android:backgroundTint="@color/background2"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/numbers"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="40dp"
                app:cornerRadius="14dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>